# simplified_todo_list

./: README.md  dune-project  simplified_todo_list.opam  todo_swamp.opam
lib/: dune  inverted_index.ml  inverted_index.mli  parser.ml  parser.mli  runner.ml  runner.mli  store.ml  store.mli  todo_list.ml  todo_list.mli  types.ml
test/: common.ml  common.mli  dune  simplified_todo_list_test.ml  test_parser.ml  test_todo_list.ml
